--- a/css/style.css
+++ b/css/style.css
@@ -87,3 +87,17 @@ nav > i:hover {
     width: 35px;
     height: 35px;
 }
+
+.fixed-left{
+    position: fixed;
+}
+
+.px-6{
+    padding-left: 3.5rem;
+    padding-right: 3.5rem
+}
+
+.px-7{
+    padding-left: 4rem;
+    padding-right: 4rem
+}
